--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-    <link href="./output.css" rel="stylesheet">
+    <link href="./src/output.css" rel="stylesheet">
 </head>
 <style>
   .main{
@@ -22,7 +22,7 @@
   <nav class=" fixed w-full z-20 top-0 start-0 ">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="./img/Logo.png" class="h-8 md:h-12" alt="Tz Logo">
+        <img src="./src/img/Logo.png" class="h-8 md:h-12" alt="Tz Logo">
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
     </a>
     <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
@@ -92,7 +92,7 @@
               </div>
             </div>
             <div class="w-full vh-100 overflow-hidden flex justify-end">
-              <img src="./img/vectorshape.png" alt="" class="h-52 md:h-full">
+              <img src="./src/img/vectorshape.png" alt="" class="h-52 md:h-full">
             </div>
           </section>
           <!-- landing Page End  -->
@@ -101,7 +101,7 @@
           <section class="grid md:grid-cols-2 grid-cols-1 " id="about">
             <div class="order border-gray-900 flex justify-center items-center md:p-0 p-2 vh-100 p-3">
               <div class="">
-                <img src="./img/Myphoto.png" alt="" class="">
+                <img src="./src/img/Myphoto.png" alt="" class="">
               </div>
             </div>
             <div class="overflow-hidden flex justify-center items-center p-3">
@@ -127,7 +127,7 @@
           <section class="grid md:grid-cols-2 grid-cols-1 " id="about">
             <div class="order border-indigo-900 flex justify-center items-center md:p-0 p-3">
               <div class="">
-                <img src="./img/backend.png" alt="" class="">
+                <img src="./src/img/backend.png" alt="" class="">
               </div>
             </div>
             <div class="overflow-hidden flex justify-center items-center p-3">
@@ -147,7 +147,7 @@
           <section class="grid md:grid-cols-2 grid-cols-1 mb-5" id="about">
             <div class="flex justify-center items-center order-last md:p-0 p-3">
               <div class="">
-                <img src="./img/frontend-dev.png" alt="" class="w-100">
+                <img src="./src/img/frontend-dev.png" alt="" class="w-100">
               </div>
             </div>
             <div class="flex justify-center items-center p-3">
@@ -173,7 +173,7 @@
           <section class="grid md:grid-cols-4 grid-cols-1 gap-2 px-2 mb-5">
             <div class="p-1">
                 <div class="h-98 max-w-sm rounded overflow-hidden shadow-lg">
-                  <img class="w-full" src="./img/visionglobalmyanmar.png" alt="Sunset in the mountains">
+                  <img class="w-full" src="./src/img/visionglobalmyanmar.png" alt="Sunset in the mountains">
                   <div class="px-6 py-4">
                     <div class="font-bold text-xl mb-2">Vision Global Myanmar</div>
                     <p class="text-gray-700 text-base">
@@ -189,7 +189,7 @@
             </div>
             <div class="p-1">
                 <div class="h-98 max-w-sm rounded overflow-hidden shadow-lg">
-                  <img class="w-full" src="./img/onepixel.png" alt="Sunset in the mountains">
+                  <img class="w-full" src="./src/img/onepixel.png" alt="Sunset in the mountains">
                   <div class="px-6 py-4">
                     <div class="font-bold text-xl mb-2">One Pixel Offset</div>
                     <p class="text-gray-700 text-base">
@@ -205,7 +205,7 @@
             </div>
             <div class="p-1">
               <div class="h-98 max-w-sm rounded overflow-hidden shadow-lg">
-                <img class="w-full" src="./img/orient-pearl.png" alt="Sunset in the mountains">
+                <img class="w-full" src="./src/img/orient-pearl.png" alt="Sunset in the mountains">
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Orient Pearl Co.,LTD</div>
                   <p class="text-gray-700 text-base">
@@ -221,7 +221,7 @@
             </div>
             <div class="p-1">
               <div class="h-98 max-w-sm rounded overflow-hidden shadow-lg">
-                <img class="w-full" src="./img/knee.png" alt="Sunset in the mountains">
+                <img class="w-full" src="./src/img/knee.png" alt="Sunset in the mountains">
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">The World Knee Support</div>
                   <p class="text-gray-700 text-base">
@@ -261,7 +261,7 @@
           <section class="grid md:grid-cols-2 h-40" id="contact">
             <div class="px-4 flex items-center">
               <div class="flex ml-8 items-center">
-                <img src="./img/Logo.png" class="h-11 md:h-16" alt="Tz Logo">
+                <img src="./src/img/Logo.png" class="h-11 md:h-16" alt="Tz Logo">
                <div class="ml-2">
                 <p class="self-center text-2xl font-semibold whitespace-nowrap ">Thant Zaw Linn</p>
                 <p> &copy; 2024 - All right Reserved</p>
