--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <nav class=" fixed w-full z-20 top-0 start-0 ">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="./src/img/Logo.png" class="h-8 md:h-12" alt="Tz Logo">
-        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Thant Zaw</span>
+        <img src="./src/img/Logo.png" class="h-12 md:h-12" alt="Tz Logo">
+        <!-- <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Thant Zaw</span> -->
     </a>
     <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
         <button type="button" class="raleway-regular bg-transparent hover:bg-sky-900 text-indigo-900 font-semibold hover:text-white py-2 px-4 border border-indigo-900 hover:border-transparent rounded text-sm px-4 py-2 text-center">
