--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <main class="main">
     <div class="p-0 w-full flex justify-center">
-      <div class="width-80 w-full rounded-lg bg-slate-100">
+      <div class="width-80 rounded-lg bg-slate-100">
           <!-- Landing Page  -->
           <section class="grid md:grid-cols-2 grid-cols-1 mb-5" id="start">
             <div class="w-full vh-100 flex justify-center  items-center md:order-first order-last md:p-0 p-2 relative md:height-0 h-64">
