--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   }
 </style>
 <body>
-  <nav class=" fixed w-full z-20 top-0 start-0 ">
+  <nav class=" fixed w-full z-20 top-0 start-0 dark:border-gray-700">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src="./src/img/Logo.png" class="h-12 md:h-12" alt="Tz Logo">
@@ -38,10 +38,10 @@
           </svg>
       </button>
     </div>
-    <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+    <div class="items-center bg-indigo-custom rounded-lg mt-3 md:bg-transparent justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
       <ul class="uppercase prompt-medium flex flex-col p-4 md:p-0 mt-4 font-medium rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
         <li>
-          <a href="#start" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500" aria-current="page">Home</a>
+          <a href="#start" class="block py-2 px-3 text-white bg-indigo-custom rounded md:bg-transparent md:text-indigo-700 md:p-0 md:dark:text-blue-500" aria-current="page">Home</a>
         </li>
         <li>
           <a href="#about" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500  dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
@@ -53,7 +53,7 @@
           <a href="#projects" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500  dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Projects</a>
         </li>
         <li>
-          <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500  dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
+          <a href="#contact" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500  dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
         </li>
       </ul>
     </div>
@@ -65,7 +65,7 @@
       <div class="width-80 rounded-lg bg-slate-100">
           <!-- Landing Page  -->
           <section class="grid md:grid-cols-2 grid-cols-1 mb-5" id="start">
-            <div class="w-full vh-100 flex justify-center  items-center md:order-first order-last md:p-0 p-2 relative md:height-0 h-64">
+            <div class="w-full vh-100 flex justify-center md:items-center md:order-first order-last md:p-0 p-2 relative md:height-0 h-64">
               <div class="text-center md:text-left mb-3 md:mb-0">
                 <span class="prompt-semibold text-2xl">Hey,</span>
                 <span class="prompt-medium-italic text-xl">I'am Thant Zaw</span>
@@ -78,7 +78,7 @@
                   Work With Me
                 </button>
               </div>
-              <div class="p-3 w-full  absolute bottom-0 md:bottom-10 left-0">
+              <div class="p-3 w-full absolute bottom-0 md:bottom-10 left-0">
                 <div class="grid grid-cols-3">
                   <div class=" p-2 flex justify-center">
                     <a href="http://" class="uppercase prompt-regular tracking-widest">Github</a>
@@ -93,13 +93,13 @@
               </div>
             </div>
             <div class="w-full vh-100 overflow-hidden flex justify-end">
-              <img src="./src/img/vectorshape.png" alt="" class="h-52 md:h-full">
+              <img src="./src/img/vectorshape.png" alt="" class="h-32 md:h-full">
             </div>
           </section>
           <!-- landing Page End  -->
     
           <!-- About Section  -->
-          <section class="grid md:grid-cols-2 grid-cols-1 " id="about">
+          <section class="grid md:grid-cols-2 grid-cols-1 mb-5" id="about">
             <div class="order border-gray-900 flex justify-center items-center md:p-0 p-2 vh-100 p-3">
               <div class="">
                 <img src="./src/img/Myphoto.png" alt="" class="">
@@ -126,7 +126,7 @@
           </div>
           
           <section class="grid md:grid-cols-2 grid-cols-1 " id="about">
-            <div class="order border-indigo-900 flex justify-center items-center md:p-0 p-3">
+            <div class="order border-indigo-900 flex justify-center  items-center md:p-0 p-3">
               <div class="">
                 <img src="./src/img/backend.png" alt="" class="">
               </div>
