modify services text

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <!-- <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Thant Zaw</span> -->
     </a>
     <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-        <button type="button" class="raleway-regular bg-transparent hover:bg-sky-900 text-indigo-900 font-semibold hover:text-white py-2 px-4 border border-indigo-900 hover:border-transparent rounded text-sm px-4 py-2 text-center">
+        <a href="tel:09794785497" type="button" class="raleway-regular bg-transparent hover:bg-sky-900 text-indigo-900 font-semibold hover:text-white py-2 px-4 border border-indigo-900 hover:border-transparent rounded text-sm px-4 py-2 text-center">
           <i class="fas fa-arrow-right"></i>
           Work With Me
-        </button>
+        </a>
         <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
           <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
@@ -73,10 +73,10 @@
                   I help Start-ups.developing
                   outstarding  web products
                 </p>
-                <button class=" raleway-regular bg-indigo-custom hover:bg-sky-900 text-white font-bold py-2 px-4 border border-indigo-700 rounded">
+                <a href="tel:09794785497" class=" raleway-regular bg-indigo-custom hover:bg-sky-900 text-white font-bold py-2 px-4 border border-indigo-700 rounded">
                   <i class="fas fa-arrow-right"></i>
                   Work With Me
-                </button>
+                </a>
               </div>
               <div class="p-3 w-full absolute bottom-0 md:bottom-10 left-0">
                 <div class="grid grid-cols-3">
@@ -134,19 +134,21 @@
             <div class="overflow-hidden flex justify-center items-center p-3">
               <div class="w-full">
               <h3 class="prompt-regular text-2xl md:text-left text-center mb-3 uppercase text-indigo-700">Backend Development</h3>
-              <p class="text-center md:text-left">
-                I am Thant Zaw Linn.I specialize in backend-developer with PHP. But I want to full-stack developer.I 
-                am a good communicator with proven inter personal skills and I am used to working in a team whilst 
-                also being capable of using own initiative.I am a hard working, honest individual. I am a good 
-                timekeeper, always willing to learn new skills.I am friendly, helpful and polite, have a good sense of 
-                humour. I am able to work independently in busy enviroments and also within a team setting
+              <p class="text-center md:text-left mb-5">
+                Translating your complex business logics into secure and maintainable code.Custom websites or services development with Laravel and integration with any SaaS platform like Stripe or Amazon Web Services. 
               </p>
+                <div class="flex justify-center md:justify-start">
+                  <a href="tel:09794785497" class="text-center raleway-regular bg-indigo-custom hover:bg-sky-900 text-white font-bold py-2 px-4 border border-indigo-700 rounded">
+                    <i class="fas fa-arrow-right"></i>
+                    Work With Me
+                  </a>
+                </div>
               </div>
             </div>
           </section>
-    
+
           <section class="grid md:grid-cols-2 grid-cols-1 mb-5" id="about">
-            <div class="flex justify-center items-center order-last md:p-0 p-3">
+            <div class="flex justify-center items-center md:p-0 p-3 md:order-last order-fast">
               <div class="">
                 <img src="./src/img/frontend-dev.png" alt="" class="w-100">
               </div>
@@ -154,13 +156,15 @@
             <div class="flex justify-center items-center p-3">
               <div class="p-3">
                 <h3 class="prompt-regular text-2xl md:text-left text-center mb-3 uppercase text-indigo-700">Frontend Development</h3>
-                <p class="text-center md:text-left">
-                  I am Thant Zaw Linn.I specialize in backend-developer with PHP. But I want to full-stack developer.I 
-                  am a good communicator with proven inter personal skills and I am used to working in a team whilst 
-                  also being capable of using own initiative.I am a hard working, honest individual. I am a good 
-                  timekeeper, always willing to learn new skills.I am friendly, helpful and polite, have a good sense of 
-                  humour. I am able to work independently in busy enviroments and also within a team setting
+                <p class="text-center md:text-left mb-5">
+                 Building your awesome product from a visual concept to a fully functional application.Sketch integration in Bootstrap or Metrial design and modern single page apps development with Vue or React.
                 </p>
+                <div class="flex justify-center md:justify-start">
+                  <a href="tel:09794785497" class="text-center raleway-regular bg-indigo-custom hover:bg-sky-900 text-white font-bold py-2 px-4 border border-indigo-700 rounded">
+                    <i class="fas fa-arrow-right"></i>
+                    Work With Me
+                  </a>
+                </div>
               </div>
             </div>
           </section> 
@@ -248,15 +252,14 @@
              </div>
             </div>
             <div class="p-3 flex justify-center items-center border-indigo-700">
-              <button class=" raleway-regular bg-indigo-custom hover:bg-sky-900 text-white font-bold py-2 px-4 border border-indigo-700 rounded">
+              <a href="tel:09794785497" class=" raleway-regular bg-indigo-custom hover:bg-sky-900 text-white font-bold py-2 px-4 border border-indigo-700 rounded">
                 <i class="fas fa-arrow-right"></i>
                 Work With Me
-              </button>
+              </a>
             </div>
 
           </section>
           <!-- Contact End  -->
-
 
           <!-- Footer  -->
           <section class="grid md:grid-cols-2 h-40" id="contact">
