Add Social Link

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
               <div class="p-3 w-full absolute bottom-0 md:bottom-10 left-0">
                 <div class="grid grid-cols-3">
                   <div class=" p-2 flex justify-center">
-                    <a href="http://" class="uppercase prompt-regular tracking-widest">Github</a>
+                    <a href="https://github.com/ThantZaw-Dev" target="_blank" class="uppercase prompt-regular tracking-widest">Github</a>
                   </div>
                   <div class=" p-2 flex justify-center">
-                    <a href="http://" class="uppercase prompt-regular tracking-widest">Facebook</a>
+                    <a href="https://www.facebook.com/thantzawdev" target="_blank" class="uppercase prompt-regular tracking-widest">Facebook</a>
                   </div>
                   <div class=" p-2 flex justify-center">
-                    <a href="http://" class="uppercase prompt-regular tracking-widest">Linking</a>
+                    <a href="http://" target="_blank" class="uppercase prompt-regular tracking-widest">Linking</a>
                   </div>
                 </div>
               </div>
@@ -265,7 +265,7 @@
           <section class="grid md:grid-cols-2 h-40" id="contact">
             <div class="px-4 flex items-center">
               <div class="flex ml-8 items-center">
-                <img src="./src/img/Logo.png" class="h-11 md:h-16" alt="Tz Logo">
+                <img src="./src/img/Logo.png" class="h-14 md:h-16" alt="Tz Logo">
                <div class="ml-2">
                 <p class="self-center text-2xl font-semibold whitespace-nowrap ">Thant Zaw Linn</p>
                 <p> &copy; 2024 - All right Reserved</p>
@@ -276,10 +276,10 @@
               <div class="p-3 w-full ">
                 <div class="grid grid-cols-3">
                   <div class=" p-2 flex justify-center">
-                    <a href="http://" class="uppercase prompt-regular tracking-widest">Github</a>
+                    <a href="https://github.com/ThantZaw-Dev" target="_blank" class="uppercase prompt-regular tracking-widest">Github</a>
                   </div>
                   <div class=" p-2 flex justify-center">
-                    <a href="http://" class="uppercase prompt-regular tracking-widest">Facebook</a>
+                    <a href="https://www.facebook.com/thantzawdev" target="_blank" class="uppercase prompt-regular tracking-widest">Facebook</a>
                   </div>
                   <div class=" p-2 flex justify-center">
                     <a href="http://" class="uppercase prompt-regular tracking-widest">Linking</a>
