--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
           
           <section class="grid md:grid-cols-2 grid-cols-1 " id="about">
             <div class="order border-indigo-900 flex justify-center  items-center md:p-0 p-3">
-              <div class="">
-                <img src="./src/img/backend.png" alt="" class="">
+              <div class="p-3">
+                <img src="./src/img/backend.gif" alt="" class="rounded-lg">
               </div>
             </div>
             <div class="overflow-hidden flex justify-center items-center p-3">
@@ -149,8 +149,8 @@
 
           <section class="grid md:grid-cols-2 grid-cols-1 mb-5" id="about">
             <div class="flex justify-center items-center md:p-0 p-3 md:order-last order-fast">
-              <div class="">
-                <img src="./src/img/frontend-dev.png" alt="" class="w-100">
+              <div class="pe-2">
+                <img src="./src/img/frontend-dev.gif" alt="" class="w-100 rounded-lg">
               </div>
             </div>
             <div class="flex justify-center items-center p-3">
@@ -186,9 +186,9 @@
                     </p>
                   </div>
                   <div class="px-6 pt-4 pb-2">
-                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#photography</span>
-                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#travel</span>
-                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#winter</span>
+                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#trading</span>
+                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#consultant</span>
+                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#training</span>
                   </div>
                 </div>
             </div>
@@ -202,9 +202,9 @@
                     </p>
                   </div>
                   <div class="px-6 pt-4 pb-2">
-                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#photography</span>
-                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#travel</span>
-                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#winter</span>
+                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#အဆင့်မြင့်တံဆိပ်ရိုက်</span>
+                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#ပုံနှိပ်နှင့် ဒီဇိုင်း</span>
+                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#ဗွီနိုင်း</span>
                   </div>
                 </div>
             </div>
@@ -218,25 +218,25 @@
                   </p>
                 </div>
                 <div class="px-6 pt-4 pb-2">
-                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#photography</span>
-                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#travel</span>
-                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#winter</span>
+                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#pearl</span>
+                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#culturing</span>
+                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#sea</span>
                 </div>
               </div>
             </div>
             <div class="p-1">
               <div class="h-98 max-w-sm rounded overflow-hidden shadow-lg">
-                <img class="w-full" src="./src/img/knee.png" alt="Sunset in the mountains">
+                <img class="w-full" src="./src/img/goldentrusttechnology.png" alt="Sunset in the mountains">
                 <div class="px-6 py-4">
-                  <div class="font-bold text-xl mb-2">The World Knee Support</div>
+                  <div class="font-bold text-xl mb-2">Golden Trust Technology</div>
                   <p class="text-gray-700 text-base">
-                    အမေရိကန် နည်းပညာသုံးကျန်းမာရေး ဒူးစွပ်များ ...ကြာရှည်အသုံးပြုနိုင်ပြီးစွမ်းဆောင်ရေးမြင့်မား
+                    Our mission is to provide unwavering support to all our clients, enabling them to excel in their marketing efforts and grow their brands step by step...
                   </p>
                 </div>
                 <div class="px-6 pt-4 pb-2">
-                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#photography</span>
-                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#travel</span>
-                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#winter</span>
+                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#technology</span>
+                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#graphic design</span>
+                  <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#marketing</span>
                 </div>
               </div>
             </div>
