service photos size changes

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <section class="grid md:grid-cols-2 grid-cols-1 mb-5" id="start">
             <div class="w-full vh-100 flex justify-center md:items-center md:order-first order-last md:p-0 p-2 relative md:height-0 h-64">
               <div class="text-center md:text-left mb-3 md:mb-0">
-                <span class="prompt-semibold text-2xl">Hey,</span>
+                <span class="prompt-semibold text-2xl">Hello,</span>
                 <span class="prompt-medium-italic text-xl">I'am Thant Zaw</span>
                 <p class="mb-4 text-xl">
                   I help Start-ups.developing
@@ -121,18 +121,18 @@
           <!-- About Section End -->
     
           <!-- Services  -->
-          <div class="text-center" id="services">
+          <div class="text-center mb-3" id="services">
             <h3 class="prompt-regular text-2xl uppercase text-indigo-700 tracking-widest">Services</h3>
           </div>
           
           <section class="grid md:grid-cols-2 grid-cols-1 " id="about">
             <div class="order border-indigo-900 flex justify-center  items-center md:p-0 p-3">
               <div class="p-3">
-                <img src="./src/img/backend.gif" alt="" class="rounded-lg">
+                <img src="./src/img/backend.gif" alt="" class="h-service-photo rounded-lg">
               </div>
             </div>
             <div class="overflow-hidden flex justify-center items-center p-3">
-              <div class="w-full">
+              <div class="w-full md:p-3">
               <h3 class="prompt-regular text-2xl md:text-left text-center mb-3 uppercase text-indigo-700">Backend Development</h3>
               <p class="text-center md:text-left mb-5">
                 Translating your complex business logics into secure and maintainable code.Custom websites or services development with Laravel and integration with any SaaS platform like Stripe or Amazon Web Services. 
@@ -149,12 +149,12 @@
 
           <section class="grid md:grid-cols-2 grid-cols-1 mb-5" id="about">
             <div class="flex justify-center items-center md:p-0 p-3 md:order-last order-fast">
-              <div class="pe-2">
-                <img src="./src/img/frontend-dev.gif" alt="" class="w-100 rounded-lg">
+              <div class="p-3">
+                <img src="./src/img/frontend-dev.gif" alt="" class="h-service-photo w-service-photo rounded-lg">
               </div>
             </div>
             <div class="flex justify-center items-center p-3">
-              <div class="p-3">
+              <div class="md:p-3">
                 <h3 class="prompt-regular text-2xl md:text-left text-center mb-3 uppercase text-indigo-700">Frontend Development</h3>
                 <p class="text-center md:text-left mb-5">
                  Building your awesome product from a visual concept to a fully functional application.Sketch integration in Bootstrap or Metrial design and modern single page apps development with Vue or React.
