--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <section class="grid md:grid-cols-2 grid-cols-1 mb-5" id="about">
             <div class="order border-gray-900 flex justify-center items-center md:p-0 p-2 vh-100 p-3">
               <div class="">
-                <img src="./src/img/Myphoto.png" alt="" class="">
+                <img src="./src/img/tz.png" alt="" class="">
               </div>
             </div>
             <div class="overflow-hidden flex justify-center items-center p-3">
