--- a/index.html
+++ b/index.html
@@ -31,12 +31,20 @@
           <i class="fas fa-arrow-right"></i>
           Work With Me
         </a>
-        <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
+        <!-- <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
           <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
           </svg>
-      </button>
+        </button> -->
+      <div class=" flex items-center relative">
+        <label for="check" class="">
+          <input type="checkbox" id="check" data-collapse-toggle="navbar-sticky" /> 
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
+      </div>
     </div>
     <div class="items-center bg-indigo-custom rounded-lg mt-3 md:bg-transparent justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
       <ul class="uppercase prompt-medium flex flex-col p-4 md:p-0 mt-4 font-medium rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
