changes menu hidden

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
           </svg>
         </button> -->
-      <div class=" flex items-center relative">
+      <div class="flex items-center md:hidden">
         <label for="check" class="">
           <input type="checkbox" id="check" data-collapse-toggle="navbar-sticky" /> 
           <span></span>
