--- a/index.html
+++ b/index.html
@@ -31,12 +31,6 @@
           <i class="fas fa-arrow-right"></i>
           Work With Me
         </a>
-        <!-- <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
-          <span class="sr-only">Open main menu</span>
-          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-          </svg>
-        </button> -->
       <div class="flex items-center md:hidden">
         <label for="check" class="">
           <input type="checkbox" id="check" data-collapse-toggle="navbar-sticky" /> 
@@ -46,10 +40,11 @@
         </label>
       </div>
     </div>
-    <div class="items-center bg-indigo-custom rounded-lg mt-3 md:bg-transparent justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+    <!-- md:text-indigo-700  md:dark:text-blue-500 -->
+    <div class="items-center rounded-lg mt-3 md:bg-transparent justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
       <ul class="uppercase prompt-medium flex flex-col p-4 md:p-0 mt-4 font-medium rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
         <li>
-          <a href="#start" class="block py-2 px-3 text-white bg-indigo-custom rounded md:bg-transparent md:text-indigo-700 md:p-0 md:dark:text-blue-500" aria-current="page">Home</a>
+          <a href="#start" class="block py-2 px-3 rounded md:bg-transparent md:p-0 md:hover:bg-transparent md:hover:text-blue-700" aria-current="page">Start</a>
         </li>
         <li>
           <a href="#about" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500  dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
@@ -89,13 +84,13 @@
               <div class="p-3 w-full absolute bottom-0 md:bottom-10 left-0">
                 <div class="grid grid-cols-3">
                   <div class=" p-2 flex justify-center">
-                    <a href="https://github.com/ThantZaw-Dev" target="_blank" class="uppercase prompt-regular tracking-widest">Github</a>
+                    <a href="https://github.com/ThantZaw-Dev" target="_blank" class="uppercase prompt-regular text-indigo-900 md:hover:text-blue-700 tracking-widest">Github</a>
                   </div>
                   <div class=" p-2 flex justify-center">
-                    <a href="https://www.facebook.com/thantzawdev" target="_blank" class="uppercase prompt-regular tracking-widest">Facebook</a>
+                    <a href="https://www.facebook.com/thantzawdev" target="_blank" class="uppercase prompt-regular text-indigo-900 md:hover:text-blue-700 tracking-widest">Facebook</a>
                   </div>
                   <div class=" p-2 flex justify-center">
-                    <a href="http://" target="_blank" class="uppercase prompt-regular tracking-widest">Linking</a>
+                    <a href="http://" target="_blank" class="uppercase prompt-regular tracking-widest text-indigo-900 md:hover:text-blue-700">Linking</a>
                   </div>
                 </div>
               </div>
@@ -284,13 +279,13 @@
               <div class="p-3 w-full ">
                 <div class="grid grid-cols-3">
                   <div class=" p-2 flex justify-center">
-                    <a href="https://github.com/ThantZaw-Dev" target="_blank" class="uppercase prompt-regular tracking-widest">Github</a>
+                    <a href="https://github.com/ThantZaw-Dev" target="_blank" class="uppercase prompt-regular tracking-widest text-indigo-900 md:hover:text-blue-700">Github</a>
                   </div>
                   <div class=" p-2 flex justify-center">
-                    <a href="https://www.facebook.com/thantzawdev" target="_blank" class="uppercase prompt-regular tracking-widest">Facebook</a>
+                    <a href="https://www.facebook.com/thantzawdev" target="_blank" class="uppercase prompt-regular tracking-widest text-indigo-900 md:hover:text-blue-700">Facebook</a>
                   </div>
                   <div class=" p-2 flex justify-center">
-                    <a href="http://" class="uppercase prompt-regular tracking-widest">Linking</a>
+                    <a href="http://" class="uppercase prompt-regular tracking-widest text-indigo-900 md:hover:text-blue-700">Linking</a>
                   </div>
                 </div>
               </div>
