change about description

--- a/index.html
+++ b/index.html
@@ -112,11 +112,12 @@
               <div class="w-full">
               <h3 class="prompt-regular text-2xl md:text-left text-center mb-3 uppercase text-indigo-700">About Me</h3>
               <p class="text-center md:text-left">
-                I am Thant Zaw Linn.I specialize in backend-developer with PHP. But I want to full-stack developer.I 
+                I am Thant Zaw Linn.I am from Pathein.I specialize in backend-developer with PHP (Laravel). But I want to full-stack developer.
+                I have four years of experience in web Development (HTML,CSS,JavaScript,PHP,MySQL) and familiar 
+                with some framework such as Laravel, bootstrap, Jquery, React and other UI libraries. And then, I 
+                worked at https://myanmaronlinetechnology.com for two years.I 
                 am a good communicator with proven inter personal skills and I am used to working in a team whilst 
-                also being capable of using own initiative.I am a hard working, honest individual. I am a good 
-                timekeeper, always willing to learn new skills.I am friendly, helpful and polite, have a good sense of 
-                humour. I am able to work independently in busy enviroments and also within a team setting
+                also being capable of using own initiative.I am able to work independently in busy enviroments and also within a team setting.
               </p>
               </div>
             </div>
