change text about

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   I help Start-ups.developing
                   outstarding  web products
                 </p>
-                <a href="tel:09794785497" class=" raleway-regular bg-indigo-custom hover:bg-sky-900 text-white font-bold py-2 px-4 border border-indigo-700 rounded">
+                <a href="tel:09794785497" class="raleway-regular bg-indigo-custom hover:bg-sky-900 text-white font-bold py-2 px-4 border border-indigo-700 rounded">
                   <i class="fas fa-arrow-right"></i>
                   Work With Me
                 </a>
@@ -111,9 +111,11 @@
             <div class="overflow-hidden flex justify-center items-center p-3">
               <div class="w-full">
               <h3 class="prompt-regular text-2xl md:text-left text-center mb-3 uppercase text-indigo-700">About Me</h3>
-              <p class="text-center md:text-left">
-                Hello, I am Thant Zaw Lin , backend web developer currently based in Yangon.
-                I started my coding journey almost exactly a year ago and now I'm working full time and doing freelance projects on the side for my friends. You may have noticed from my portfolio, but I'm obsessed with unique, interesting design and user-friendly functionality so hit me up with your weird artistic project ideas or app proposals.
+              <p class="text-center md:text-left raleway-regular">
+                <span class="text-xl ">"Hello World</span>, I am Thant Zaw Lin , backend web developer currently based in Yangon.
+                I started my coding journey almost exactly a few year ago and now I'm working full time for my shop and doing freelance projects on the side. 
+                You may have noticed from my portfolio, but I'm obsessed with unique, interesting design and user-friendly
+                functionality so hit me up with your weird artistic project ideas or app proposals.
               </p>
               </div>
             </div>
