--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           background-color:#ffffff;
       }
       .loader {
-          color: #1a129f;
+          color: #1f4167;
           font-size: 20px;
           margin: 100px auto;
           width: 1em;
