--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           height:100vh;
           position:fixed;
           z-index: 2000;
-          background-color:#ffffff;
+          background-color:#220848;
       }
       .loader {
           color: #1f4167;
@@ -105,7 +105,10 @@
 </style>
 <body>
   <div class="loader-container">
-    <div class="loader">Loading...</div>
+    <!-- <div class="loader">Loading...</div> -->
+    <div>
+      <img src="./src/img/t-loading.gif" alt="">
+    </div>
   </div>
   <nav class=" fixed w-full z-20 top-0 start-0 dark:border-gray-700 site-nav">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
