--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <div class="w-full">
               <h3 class="prompt-regular text-2xl md:text-left text-center mb-3 uppercase text-indigo-700">About Me</h3>
               <p class="text-center md:text-left raleway-regular">
-                <span class="text-xl ">"Hello World</span>, I am Thant Zaw Lin , backend web developer currently based in Yangon.
+                <span class="text-xl ">"Hello</span>, I am Thant Zaw, backend web developer currently based in Yangon.
                 I started my coding journey almost exactly a few year ago and now I'm working full time for my shop and doing freelance projects on the side. 
                 You may have noticed from my portfolio, but I'm obsessed with unique, interesting design and user-friendly
                 functionality so hit me up with your weird artistic project ideas or app proposals.
