loading photo change

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           background-color:#ffffff;
       }
       .loader-img{
-        width: 100px;
-        height:100px;
+        width: 300px;
+        height:300px;
       }
 
     </style>
@@ -41,7 +41,7 @@
 <body>
   <div class="loader-container">
     <div>
-      <img src="./src/img/loading.gif" alt="loading" class="w-25 loader-img">
+      <img src="./src/img/loading-bubble.gif" alt="loading" class="w-25 loader-img">
     </div>
   </div>
   <nav class=" fixed w-full z-20 top-0 start-0 dark:border-gray-700 site-nav">
