--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           height:100vh;
           position:fixed;
           z-index: 2000;
-          background-color:#ffffff;
+          background-color:#fbfbfb;
       }
       .loader-img{
         width: 300px;
