--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <img src="./src/img/loading-bubble.gif" alt="loading" class="w-25 loader-img">
     </div>
   </div>
-  <nav class=" fixed w-full z-20 top-0 start-0 dark:border-gray-700 site-nav">
+  <nav class="fixed w-full z-20 top-0 start-0 dark:border-gray-700 site-nav">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src="./src/img/Logo.png" class="h-12 md:h-12" alt="Tz Logo">
@@ -56,12 +56,19 @@
           Work With Me
         </a>
       <div class="flex items-center md:hidden">
-        <label for="check" class="">
+        <!-- <label for="check" class="">
           <input type="checkbox" id="check" data-collapse-toggle="navbar-sticky" /> 
           <span></span>
           <span></span>
           <span></span>
-        </label>
+        </label> -->
+        <button class="menu" data-collapse-toggle="navbar-sticky" onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))" aria-label="Main Menu">
+          <svg width="50" height="40" viewBox="0 0 100 100">
+            <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
+            <path class="line line2" d="M 20,50 H 80" />
+            <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
+          </svg>
+        </button>
       </div>
     </div>
     <!-- md:text-indigo-700  md:dark:text-blue-500 -->
